Fix: About me background image is not showing.  Issue with navigation menu alignment on mobbile. - Fixed issue where the About Me ackground image was not displaying due to an invalid image path - Corrected misalignment of the navigation menu toggle with social icons by removing all default button padding and sdjusting social icon margins.  Hopefully this does the trick as the issue is only happening in production env.

--- a/Styles/about.css
+++ b/Styles/about.css
@@ -1,5 +1,5 @@
 #about {
-  background: #000 url("../assets//images/Parallax/unfoldTheUniverse_2.jpg")
+  background: #000 url("../assets/images/FinalParallax/unfoldTheUniverse.webp")
     no-repeat center center;
   backdrop-filter: blur(5px);
   background-size: cover;
