--- a/Styles/normalize.css
+++ b/Styles/normalize.css
@@ -25,6 +25,7 @@ body {
 button {
   background: none;
   border: none;
+  padding: 0;
 }
 
 /* ul {
